cargo-desugar/tests/ui/impl-trait-arg.out
error: expected identifier, found keyword `impl`
 --> tests/ui/impl-trait-arg.desugared.rs:9:14
  |
9 | pub fn takes<impl Iterator<Item = u32>>(_: impl Iterator<Item = u32>) where
  |              ^^^^ expected identifier, found keyword

error: expected one of `,`, `:`, `=`, or `>`, found `Iterator`
 --> tests/ui/impl-trait-arg.desugared.rs:9:19
  |
9 | pub fn takes<impl Iterator<Item = u32>>(_: impl Iterator<Item = u32>) where
  |                   ^^^^^^^^ expected one of `,`, `:`, `=`, or `>`

error: aborting due to 2 previous errors

